--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,10 @@ name = "pypi"
 
 [packages]
 
-[dev-packages]
+[dev - packages]
 neovim = "*"
+pytest = "*"
+black = "*"
 
 [requires]
 python_version = "3.6"
