Also ignoring the results directory and improving a comment in gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -230,6 +230,7 @@ tags.tmp
 *.sync
 *.jekyll-metadata
 
-# Data files #
+# Results director and data files #
 ######################
 .json
+results/
