--- a/speedsurprises/.travis.yml
+++ b/speedsurprises/.travis.yml
@@ -21,5 +21,5 @@ before_script:
 # --> run the internal test suite with pytest
 # --> Markdown: mdl
 script:
-  - pytest
+  - pytest -s -v
   - mdl README.md
