Seperating benchmarking for the fibonaccis.

--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,9 @@ name = "pypi"
 [packages]
 "flake8" = "*"
 pylint = "*"
+pytest = "*"
+"pytest.cov" = "*"
+hypothesis = "*"
 
 [dev-packages]
 pylint = "*"
