Add prettytable installation to travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_install:
 install:
   - pip install --upgrade pip
   - pip install pipenv --upgrade
+  - pip install prettytable
   - pipenv install --dev --three
 
 # use a cache to improve performance
