--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,7 @@ black = "*"
 pytest = "*"
 pytest-benchmark = "*"
 hypothesis = "*"
-"flake8" = "*"
+flake8 = "*"
 pytest-cov = "*"
 codecov = "*"
 
