--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+hypothesis-jsonschema = "*"
 
 [dev-packages]
 pylint = "*"
@@ -15,6 +16,7 @@ hypothesis = "*"
 flake8 = "*"
 pytest-cov = "*"
 codecov = "*"
+v = {editable = true,version = "*"}
 
 [requires]
 python_version = "3.6"
