--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ flake8 = "*"
 pytest-cov = "*"
 codecov = "*"
 v = {editable = true,version = "*"}
+python-constraint = "*"
 
 [requires]
 python_version = "3.6"
