--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Gregory M. Kapfhammer <gkapfham@allegheny.edu>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 typer = "^0.3.2"
+deap = "^1.3.1"
+python-constraint = "^1.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -14,6 +16,10 @@ pylint = "^2.6.0"
 black = "^20.8b1"
 pydocstyle = "^5.1.1"
 flake8 = "^3.8.4"
+pytest-benchmark = "^3.2.3"
+hypothesis = "^6.0.1"
+pytest-cov = "^2.10.1"
+codecov = "^2.1.11"
 
 [build-system]
 requires = ["poetry>=0.12"]
