--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ taskipy = "^1.8.1"
 
 [tool.taskipy.tasks]
 pydocstyle = { cmd = "pydocstyle speedsurprises tests", help = "Run the pydocstyle checks for source code documentation" }
+test = { cmd = "pytest -x -s", help = "Run the pytest test suite (takes a long time)" }
 
 [build-system]
 requires = ["poetry>=0.12"]
