Improve the build.yml file so that it tracks and uploads coverage.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,10 +53,10 @@ jobs:
         - name: Install all of the dependencies
           run: |
             poetry install
-        # Run the pytest test suite
-        - name: Run Pytest Test Suite
+        # Run the pytest test suite and collect coverage
+        - name: Run Pytest Test Suite with Coverage Monitoring
           run: |
-            poetry run task test
+            poetry run task coverage
         # Run the black code formatter in checking mode
         - name: Run Black Code Formatter
           run: |
