Capitalize a word inside of the build.yml file for "Upload Coverage".

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,7 +73,7 @@ jobs:
         - name: Run Pylint Linting Tool
           run: |
             poetry run task pylint
-        - name: Upload coverage
+        - name: Upload Coverage
           uses: codecov/codecov-action@v1
           with:
             files: ./coverage.xml
